tests/fixtures/semantics/invalid/switch_enum_wrong_qualified.ora
contract SemInvalidSwitchEnumWrongQualified {
    enum Color: u8 { Red, Green }
    enum Status: u8 { Idle, Busy }
    pub fn demo() {
        let s: Status = Status.Idle;
        // Invalid: qualified enum pattern refers to different enum than condition
        let v: u256 = switch (s) {
            Color.Red => 0,
            else => 1,
        };
        _ = v;
    }
}


